--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,24 +1,47 @@
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Node Modules
+node_modules/
+
+# Build outputs
+dist/
+dist-ssr/
+.vite/
+.vitepress/cache/
+
+# TypeScript
+*.tsbuildinfo
+
+# Environment variables
+.env
+.env.local
+.env.development
+.env.test
+.env.production
 
 # Editor directories and files
-.vscode/*
+.vscode/
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# ESLint & Prettier cache
+.eslintcache
+
+# Jest & Vitest
+coverage/
+.vitest/
+
+# Tailwind CSS
+.tailwind/
